--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <!--     <script src="../../addons/p5.dom.min.js"></script> -->
 <!--     <script src="../../addons/p5.sound.min.js"></script> -->
 <!--     <script language="javascript" type="text/javascript" src="../../addons/p5.dom.js"></script> -->
+<!-- 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> 
 		<script src="graphics.js"></script>
