Restructuring and added learn to code - typing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> 
 	<script src="graphics.js"></script>
-	<script src="scene.js"></script>
+	<script src="characters.js"></script>
+	<script src="scene_design.js"></script>
+	<script src="scene_build.js"></script>
 	<script src="main.js"></script>
   </head>
   <body>
